# ImagineIncredibleEngine

./: .gitignore  .gitmodules  CMakeLists.txt  FancyEngineDemo.sln  GenerateProjects.bat  ImagineIncredibleEngine.sln  README.md  premake5.lua
FancyEngine/: FancyEngine.vcxproj  FancyEngine.vcxproj.filters
FancyEngine/src/: FancyEngine.h
FancyEngine/src/FancyEngine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
ImagineIncredible/: ImagineIncredible.vcxproj  ImagineIncredible.vcxproj.filters
ImagineIncredible/src/: ImagineIncredible.h
ImagineIncredible/src/ImagineIncredible/: Application.cpp  Application.h  Core.h  EntryPoint.h
Poker/: CMakeLists.txt
Poker/Events/: ApplicationEvent.h
Poker/include/: Application.h  Core.h  EntryPoint.h  Log.h  pokerPch.h
Poker/src/: Log.cpp
Poker/third/: config.cmake
PokerLib/: CMakeLists.txt
PokerLib/Events/: Event.h  KeyEvent.h  MouseEvent.h
PokerLib/include/: Application.h  Core.h  Log.h  PokerEngine.h
PokerLib/src/: Application.cpp  Log.cpp  pokerPch.cpp
Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Sandbox/src/: SandboxApp.cpp
